--- a/src/Eticket.Infra.CrossCutting.IoC/packages.config
+++ b/src/Eticket.Infra.CrossCutting.IoC/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+	<package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.3" developmentDependency="true" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="CommonServiceLocator.SimpleInjectorAdapter" version="2.8.2" targetFramework="net45" />
   <package id="Portable.CommonServiceLocator" version="1.2.2" targetFramework="net45" />
